@@ -1,13 +1,14 @@
 Package: expm
 Type: Package
 Title: Matrix Exponential, Log, 'etc'
-Version: 0.999-1
-Date: 2017-02-02
+Version: 0.999-2
+Date: 2017-03-28
 Author: Vincent Goulet, Christophe Dutang, Martin Maechler,
 	David Firth, Marina Shapira, Michael Stadelmann
 Contact: expm-developers@lists.R-forge.R-project.org
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
-Description: Computation of the matrix exponential, logarithm, and related quantities.
+Description: Computation of the matrix exponential, logarithm, sqrt,
+  and related quantities.
 Depends: Matrix
 Imports: methods
 Suggests: RColorBrewer, sfsmisc, Rmpfr
